[package]
name = "hyper-jump"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4",  features = ["derive", "env"] }
tokio = { version = "1.37.0", features = ["full"] }
miette = { version = "5.10.0", features = ["fancy"] }
directories = "5.0.1"
tracing = "0.1.40"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
regex = "1.10.5"
semver = "1.0.23"
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["stream", "rustls-tls"] }
indicatif = "0.17.8"
futures-util = { version = "0.3.30", default-features = false }
