[package]
name = "hyper-jump"
version = "0.9.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["Alexsander Falcucci <alex.falcucci@gmail.com>"]
description = "A generalist all-in-one command-line version manager toolset for a more efficient development workflow."
categories = ["command-line-utilities"]
repository = "https://github.com/falcucci/hyper-jump"
keywords = ["version-manager", "blockchain", "node-management", "cli-tool"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version = "1.37.0", features = ["full"] }
miette = { version = "5.10.0", features = ["fancy"] }
directories = "5.0.1"
tracing = "0.1.40"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
regex = "1.10.5"
semver = "1.0.23"
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["stream", "rustls-tls"] }
indicatif = "0.17.8"
futures-util = { version = "0.3.30", default-features = false }
flate2 = "1.0.30"
tar = "0.4.41"
zip = "2.1.6"
zip-extract = "0.1.3"
xz2 = "0.1.7"
signal-hook = "0.3.17"
nix = { version = "0.29.0", features = ["signal"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
chrono = { version = "0.4.38", features = ["serde"] }
yansi = "1.0.1"
comfy-table = "7.1.1"

[[bin]]
path = "src/main.rs"
name = "hyper-jump"
proc-macro = false
required-features = []

[profile.optimized]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
